--- a/src/index.html
+++ b/src/index.html
@@ -11,6 +11,7 @@
 
 <body class="bg-slate-50">
 
+    <!--NAV BAR-->
     <nav class="border-gray-200 bg-verde-ods-oscuro">
         <div class="max-w-screen-xl flex flex-wrap items-center justify-between mx-auto p-4">
 
@@ -57,7 +58,7 @@
         </div>
     </nav>
 
-
+    <!--INICIO-->
     <header id="inicio" class="header flex flex-row flex-wrap justify-center items-center min-h-screen">
         <div class="titulo text-7xl p-8">
             <h1 class="text-center font-serif font-extrabold text-verde-ods-oscuro">Blog sobre las ODS</h1>
@@ -68,6 +69,7 @@
         </div>
     </header>
 
+    <!--INFORMACIÓN BLOG-->
     <section id="infoBlog" class="seccionInfo flex flex-row flex-wrap justify-center items-center min-h-screen">
         <div class="imgHoja p-8">
             <img class="fotoHoja w-[50vh]" src="resources/img/hoja.png" alt="hoja verde">
@@ -83,6 +85,7 @@
     </section>
 
 
+    <!--BLOG-->
     <div id="blog" class="flex flex-col justify-center items-center">
         <div class="m-12 text-center text-pretty">
             <h1 class="text-6xl text-center font-serif font-extrabold text-verde-ods-oscuro">Blog</h1>
@@ -102,6 +105,7 @@
                 Energía asequible y no contaminante <b>(Andrés)</b>
             </p>
         </article>
+
         <article
             class="w-56 h-48 m-4 flex justify-center items-center text-center bg-green-100 rounded-xl hover:bg-green-700 hover:text-white cursor-pointer"
             title="Producción y consumo responsables" data-imagen="null"
@@ -111,6 +115,7 @@
                 Producción y consumo responsables <b>(Andrés)</b>
             </p>
         </article>
+
         <article
             class="w-56 h-48 m-4 flex justify-center items-center text-center bg-green-100 rounded-xl hover:bg-green-700 hover:text-white cursor-pointer"
             title="Vida Submarina" data-imagen="null"
@@ -119,6 +124,7 @@
             Por otra parte, suelo realizar pesca deportiva en las áreas cercanas a Bahía de Kino. Los peces que atrapamos luego son consumidos por mi familia, y así podemos asegurarnos que nuestros alimentos son de una fuente mucho más sustentable que lo que se podría comprar en los supermercados o pescaderías comerciales.">
             <p>Vida Submarina <b>(Sebastian)</b></p>
         </article>
+
         <article
             class="w-56 h-48 m-4 flex justify-center items-center text-center bg-green-100 rounded-xl hover:bg-green-700 hover:text-white cursor-pointer"
             title="Salud y Bienestar" data-imagen="null"
@@ -130,6 +136,7 @@
                 Salud y Bienestar <b>(Sebastian)</b>
             </p>
         </article>
+
         <article
             class="w-56 h-48 m-4 flex justify-center items-center text-center bg-green-100 rounded-xl hover:bg-green-700 hover:text-white cursor-pointer"
             title="Accion por el clima" data-imagen="null"
@@ -137,6 +144,7 @@
             data-info="Una de mis actividades favoritas de hacer rutinariamente es ir al supermercado con mi mamá, sin embargo, fue hace unos años, debido principalmente a la cuarentena, que las cosas que antes realizaba con cotidianidad tuvieron que cambiar. Ejemplo de ello fue el comenzar a hacer compras responsables, ya que en mi casa estábamos acostumbrados a adquirir más alimentos de los que era posible consumir. Teníamos la mentalidad de que era mejor comprar los productos de manera no tan consciente, dejándonos llevar por la accesibilidad, las ofertas y la oportunidad de ahorrarnos otro viaje al super, hoy en día esto ha cambiado. En mi hogar procuramos comprar solo lo primordial, productos locales y frescos que serán suficientes para consumir durante máximo dos semanas. Además, debido a los nuevos reglamentos, comenzamos a utilizar bolsas de tela reutilizables, intentamos llevar mínimo una bolsa grande siempre en el carro. A la vez, el comprar moderadamente apoya a que no usemos el transporte particular por mucho tiempo, reduciendo la emisión de humo.">
             <p>Accion por el clima <b>(Danna)</b></p>
         </article>
+
         <article
             class="w-56 h-48 m-4 flex justify-center items-center text-center bg-green-100 rounded-xl hover:bg-green-700 hover:text-white cursor-pointer"
             title="Vida de ecosistemas terrestres" data-imagen="null"
@@ -185,13 +193,13 @@
             "><b>Reseña pelicula Wall-E</b>
         </article>
 
-
         <article
             class="w-56 h-48 m-4 flex justify-center items-center text-center bg-green-100 rounded-xl hover:bg-green-700 hover:text-white cursor-pointer"
             title="Experiencia Pelicula Andrés" data-imagen="resources/img/pelicula/inicio_peli.jpeg"
             data-predeterminado=""
             data-info="Vimos a través de Discord la película de Wall E, prendimos la cámara y compartimos comentarios sobre la película. Ver la película con mis compañeros me gustó mucho, me divertí mucho con los comentarios durante la película y fue un tiempo agradable que volvería a repetir.">
-            Experiencia Pelicula <b>(Andrés)</b></article>
+            Experiencia Pelicula <b>(Andrés)</b>
+        </article>
 
         <article
             class="w-56 h-48 m-4 flex justify-center items-center text-center bg-green-100 rounded-xl hover:bg-green-700 hover:text-white cursor-pointer"
@@ -207,7 +215,8 @@
             title="Experiencia Pelicula Danna" data-imagen="resources/img/pelicula/final_peli.jpeg"
             data-predeterminado="" data-info="Esta actividad me pareció divertida y un buen motivo para volver a ver esta película después de mucho tiempo. Cuando la película fue estrenada y la vi por primera vez, no me resultaba tan interesante, debido a la falta de diálogos y sobre todo a que el mensaje no era algo que yo pudiera reflexionar y comprender a esa edad. Sin embargo, me da mucho gusto haber tenido la oportunidad de verla nuevamente y ahora sí apreciar lo bonita que es la animación, y también para profundizar acerca de su moraleja final.
         ">Experiencia
-            Pelicula <b>(Danna)</b></article>
+            Pelicula <b>(Danna)</b>
+        </article>
 
         <!--Platica-->
 
@@ -216,7 +225,9 @@
             title="Plática sobre creación de composta" data-imagen="null" data-predeterminado="" data-info="Para realizar esta dinámica consideramos varios lugares y comunidades en los cuales llevar a cabo la plática, después de discutirlo, y debido a la disponibilidad, nos decidimos por hacer nuestra presentación dentro de la universidad. Pedimos permiso a la profesora Tatliana Mercedes Icedo Zamora, quien previamente nos había impartido clases, para compartir nuestra plática durante unos minutos en una de sus sesiones. El grupo al que nos dirigimos pertenecía a la carrera de Mecatrónica, y los estudiantes eran de diferentes semestres.
 
         Optamos por  las ODS 12 y 13 (Producción, Consumo Responsable y Acción por el Clima) como tema respecto el cual brindar información, específicamente hablamos sobre cómo realizar, en qué consiste y la importancia de la composta para reducir el impacto ambiental. Dos de nosotros presentamos una infografía con los pasos básicos para realizar una composta en casa, mientras otro compañero mostró cómo implementar dicha información.
-        "><b>Plática sobre creación de composta</b></article>
+        "><b>Plática sobre creación de composta</b>
+        </article>
+
         <article
             class="w-56 h-48 m-4 flex justify-center items-center text-center bg-green-100 rounded-xl hover:bg-green-700 hover:text-white cursor-pointer"
             title="Infografía creación de composta" data-imagen="resources/img/platica/Infografia_composta.png"
@@ -224,28 +235,34 @@
                 href="https://www.canva.com/design/DAGR1SNaSwI/HAhPPdsIyXnlA2FwEKXVEw/edit?utm_content=DAGR1SNaSwI&utm_campaign=designshare&utm_medium=link2&utm_source=sharebutton ">Infografia
                 creación de composta</a>
         </article>
+
         <article
             class="w-56 h-48 m-4 flex justify-center items-center text-center bg-green-100 rounded-xl hover:bg-green-700 hover:text-white cursor-pointer"
             title="Experiencia plática Andrés" data-imagen="null" data-predeterminado=""
             data-info="Dar la plática fue una experiencia muy divertida, los oyentes fueron muy agradables y cooperativos al momento de presentarles la presentación sobre la creación de la composta. En mi parte, que yo fuí el que enseño como hacer una composta, cuando les dije a los oyentes que se levantaran para poder ver el proceso de creación de cerca, fueron comprensivos y buena onda, porque sí hubo mucha gente que se paró y se involucró en la plática. Ese gesto, y en general, toda la plática fue toda una muy bonita experiencia. Ver el video sobre como crear una composta.">
             Experiencia
-            plática <b>(Andrés)</b> </article>
+            plática <b>(Andrés)</b>
+        </article>
+
         <article
             class="w-56 h-48 m-4 flex justify-center items-center text-center bg-green-100 rounded-xl hover:bg-green-700 hover:text-white cursor-pointer"
             title="Experiencia plática Sebastian" data-imagen="resources/img/platica/platica_sebas.jpeg"
             data-predeterminado=""
             data-info="Los estudiantes presentes en la plática fueron muy simpáticos. Nos preguntaron cosas y se notó un interés genuino en lo que veníamos a mostrarles. De igual manera, la maestra Tatiana fue muy linda. Les expliqué acerca del proceso de la descomposición de la materia y parece ser que les gustó mucho el tema a los alumnos.">
-            Experiencia plática <b>(Sebastian)</b></article>
+            Experiencia plática <b>(Sebastian)</b>
+        </article>
+
         <article
             class="w-56 h-48 m-4 flex justify-center items-center text-center bg-green-100 rounded-xl hover:bg-green-700 hover:text-white cursor-pointer"
             title="Experiencia plática Danna" data-imagen="resources/img/platica/platica_danna.jpeg"
             data-predeterminado=""
             data-info="Me gusto realizar la infografía y la presentación acerca de este tema. La profesora fue muy amable al prestarnos tiempo de su hora para realizar nuestra plática y la audiencia fue respetuosa y atenta a la información que quisimos aportar. ">
-            Experiencia plática <b>(Danna)</b></article>
-
+            Experiencia plática <b>(Danna)</b>
+        </article>
 
     </main>
 
+    <!--VIDEO-->
     <section id="video" class="seccTituloCreacionComposta flex flex-col justify-center items-center">
         <div class="flex flex-col justify-center items-center">
             <div class="m-12 text-center text-pretty">
@@ -260,14 +277,16 @@
         </iframe>
     </section>
 
+    <!--POP-UP HIDDEN (Se activa cuando se clickea a un div-blog)-->
     <div id="mi-popup"
         class="popup overflow-auto text-justify hidden fixed top-0 left-0 w-[100%] h-[100%] bg-black-trans">
         <button class="close-btn absolute top-2.5 right-2.5 bg-red-600 text-white p-2.5 cursor-pointer"
-            id="close-btn">Cerrar</button>
+            id="close-btn">Cerrar
+        </button>
         <div id="textoMostrar" class="bg-slate-950"> </div>
-
     </div>
 
+    <!--JS-->
     <script src="resources/js/cartaInfo.js"></script>
 </body>
 
