--- a/src/index.html
+++ b/src/index.html
@@ -16,7 +16,7 @@
         <div class="max-w-screen-xl flex flex-wrap items-center justify-between mx-auto p-4">
 
             <a href="#inicio" class="flex items-center space-x-3 rtl:space-x-reverse">
-                <img src="/src/resources/img/planeta.png" class="h-16" alt="Flowbite Logo" />
+                <img src="/src/resources/img/planeta.png" class="h-16" alt="Logo" />
                 <span class="self-center text-2xl font-semibold whitespace-nowrap dark:text-white"
                     title="Hecho por Andrés López Corrales">Blog ODS</span>
             </a>
